--- a/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
@@ -160,7 +160,7 @@
                     }
 
                     <div class="footSec">
-                        @if (@Model.SellPrice > 0 && @Model.SellPrice.HasValue && @Model.PercentMargin > 0 && (stockAvailable > 0))
+                        @if (@Model.SellPrice > 0 && @Model.SellPrice.HasValue && (stockAvailable > 0))
                         {
                             <div class="qty">
                                 <span>quantity</span>
