--- a/WarehouseEcommerce/Content/Theme/University/app/css/App.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/App.css
@@ -1193,7 +1193,7 @@ input[type="number"]::-webkit-outer-spin-button {
             }
 
             .nb_feat_prod_sec .nb_featuredPrdCarrousle .nb_fp_boxwrap:hover .prd_img {
-                border: solid 1px #f33655;
+/*                border: solid 1px #f33655;*/
             }
 
                 .nb_feat_prod_sec .nb_featuredPrdCarrousle .nb_fp_boxwrap:hover .prd_img img {
