--- a/WarehouseEcommerce/Views/Theme/University/Orders/PayPal.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/PayPal.cshtml
@@ -43,7 +43,7 @@
                     <h4 class="ordConfirmHead">Payments</h4>
                     <div class="orderTotalsec">
                         @*<div>Order Total</div><br/>*@
-                        <div>Order Total <p><span>@Model.CurrencySymbol</span><span class="total-amount">@Model.TotalOrderAmount</span></p></div>
+                        <div>Order Total <p><span>@ViewBag.CurrencySymbol</span><span class="total-amount">@Model.TotalOrderAmount</span></p></div>
 
                     </div>
 
