--- a/WarehouseEcommerce/Views/Theme/University/Orders/SagePay.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/SagePay.cshtml
@@ -41,7 +41,7 @@
                 <div class="checkoutInnersec Paymentsec">
                     <h4 class="ordConfirmHead">Payments</h4>
                     <div class="orderTotalsec">
-                        <div> Order Total <span>@Model.CurrencySymbol@Model.TotalOrderAmount</span></div>
+                        <div> Order Total <span>@ViewBag.CurrencySymbol@Model.TotalOrderAmount</span></div>
                     </div>
 
                     <div class="paymentTabsec">
