--- a/WarehouseEcommerce/Views/Theme/Smart/Orders/_ShipmentRule.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Orders/_ShipmentRule.cshtml
@@ -12,7 +12,7 @@
                    type="radio"
                    name="shipment-rule-radio"
                    value="@rule.Id" />
-            <label for="shipment-rule__checkbox-@rule.Id"><b>@Model.CurrencySymbol@rule.Price</b> ( @rule.Courier @(string.IsNullOrEmpty(rule.Description) ? string.Empty : $" - {rule.Description}") )</label>
+            <label for="shipment-rule__checkbox-@rule.Id"><b>@ViewBag.CurrencySymbol@rule.Price</b> ( @rule.Courier @(string.IsNullOrEmpty(rule.Description) ? string.Empty : $" - {rule.Description}") )</label>
         </div>
     }
     <div class="btnWrap">
