--- a/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmPaymentMessage.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmPaymentMessage.cshtml
@@ -93,7 +93,7 @@
                         }
                         else
                         {
-                            <p class="content">Delivery by @Model.ShippingRule.Courier @(!string.IsNullOrEmpty(Model.ShippingRule.Description?.Trim()) ? $"({Model.ShippingRule.Description})" : "") - @Model.CurrencySymbol@Model.ShippingRule.Price</p>
+                    <p class="content">@ViewBag.CurrencySymbol@Model.ShippingRule.Price - by @Model.ShippingRule.Courier @(!string.IsNullOrEmpty(Model.ShippingRule.Description?.Trim()) ? $"({Model.ShippingRule.Description})" : "")</p>
                         }
                         <h4 class="subHead">
                             Payment Method
@@ -116,7 +116,7 @@
                             }
                         </ul>
                         <h4 class="subHead">Total Amount</h4>
-                        <h4 class="subHead">@Model.CurrencySymbol@(Model?.TotalOrderAmount ?? 0)</h4>
+                        <h4 class="subHead">@ViewBag.CurrencySymbol@(Model?.TotalOrderAmount ?? 0)</h4>
 
                     </div>
                     <div class="saveAddrWrap mt-5 mb-5 ml-3 mr-3">
