Asterisk added for required input fields + typo fixes Imported from Changeset 2822

--- a/WarehouseEcommerce/Views/Theme/University/Orders/_CollectionPoint.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_CollectionPoint.cshtml
@@ -8,7 +8,7 @@
         @Html.Partial("_CollectionPointSelector")
         <div class="btnWrap">
             <button class="addnwShopAdrrbtn" id="select-collection-point__button" disabled onclick="chooseCollectionPoint(@((int)CheckoutStep.BillingAddress))">Select Collection Point</button>
-            <a href="@Url.Action("GoToPreviousStep","orders")" class="addnwShopAdrrbtn">Back</a>
+            <a href="@Url.Action("GoToPreviousStep","orders")" class="addnwShopAdrrbtn">BACK</a>
         </div>
     </div>
 </div>
