--- a/WarehouseEcommerce/Views/Theme/University/Orders/_DeliveryMethod.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_DeliveryMethod.cshtml
@@ -20,6 +20,6 @@
     </div>
     <div class="btnWrap">
         <button class="addnwShopAdrrbtn" onclick="chooseDeliveryMethod()">SELECT DELIVERY METHOD</button>
-        <a href="@Url.Action("GoToPreviousStep","orders")" class="addnwShopAdrrbtn">Back</a>
+        <a href="@Url.Action("GoToPreviousStep","orders")" class="addnwShopAdrrbtn">BACK</a>
     </div>
 </div>
