--- a/WarehouseEcommerce/Views/Theme/University/Orders/_ShipmentRule.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_ShipmentRule.cshtml
@@ -18,7 +18,7 @@
     }
     <div class="btnWrap">
         <a href="javascript:;" class="addnwShopAdrrbtn payment-type-btns" onclick="chooseShippingRule(@((int)CheckoutStep.BillingAddress))">SELECT SHIPMENT TYPE</a>&nbsp;
-        <a href="@Url.Action("GoToPreviousStep","orders")" class="btmBtn addnwShopAdrrbtn payment-type-btns">Back</a>
+        <a href="@Url.Action("GoToPreviousStep","orders")" class="btmBtn addnwShopAdrrbtn payment-type-btns">BACK</a>
 
     </div>
 </div>
