--- a/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
@@ -161,7 +161,7 @@
                                             <td>
                                                 <div class="headBoxTop">
                                                     <h3 class="head">Home Delivery</h3>
-                                                    <p>@(!string.IsNullOrEmpty(Model.ShippingAddressPostCode?.Trim()) ? "Selected PostCode: " : string.Empty)<span id="shipping-address-postcode">@Model.ShippingAddressPostCode</span></p>
+                                                    <p>@(!string.IsNullOrEmpty(Model.ShippingAddressPostCode?.Trim()) ? "Selected Postcode: " : string.Empty)<span id="shipping-address-postcode">@Model.ShippingAddressPostCode</span></p>
                                                 </div>
                                             </td>
                                         }
