changing Paypal to PayPal Imported from Changeset 2826

--- a/WarehouseEcommerce/Views/Theme/Smart/Orders/ConfirmOrder.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Orders/ConfirmOrder.cshtml
@@ -182,7 +182,7 @@
                                 {
                                     <div class="form-inline">
                                         <label class="control-label" for="radio1">
-                                            Paypal
+                                            PayPal
                                         </label>
                                     </div>
                                 }
