--- a/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmOrder.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmOrder.cshtml
@@ -121,7 +121,7 @@
 
                     </div>
                     <div class="saveAddrWrap mt-5 mb-5 ml-3 mr-3">
-                        @if ((PaymentMethodEnum?)Model.PaymentMethodId == PaymentMethodEnum.Paypal)
+                        @if ((PaymentMethodEnum?)Model.PaymentMethodId == PaymentMethodEnum.PayPal)
                         {
 
 
