--- a/WarehouseEcommerce/Views/Theme/University/Orders/_PaymentMethod.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_PaymentMethod.cshtml
@@ -7,8 +7,8 @@
                 id="paypal__checkbox"
                 type="radio"
                 name="payment-method-radio"
-                value="@((int)PaymentMethodEnum.Paypal)" />
-        <label for="paypal__checkbox">Paypal</label>
+                value="@((int)PaymentMethodEnum.PayPal)" />
+        <label for="paypal__checkbox">PayPal</label>
     </div>
     <div class="checkboxwrap">
         <input class="styled-checkbox"
