update color of price filter
Imported from Changeset 2828

--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -3384,11 +3384,11 @@ body.modal-open {
 }
 
     #slider-range div {
-        background-color: #f33655;
+        background-color: var(--secondary-color);
     }
 
 .price-range-div div#amount {
-    color: #f33655;
+    color: var(--secondary-color);
     border: 0;
     font-weight: 600;
     width: 100%;
