--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>@ViewBag.Title</title>
     <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/bootstrap")
     @Styles.Render("~/Content/Theme/University/app/css/university")
@@ -18,6 +18,7 @@
     <link href="~/Content/Theme/University/app/css/jquery-confirm.min.css" rel="stylesheet" />
 
     @Scripts.Render("~/bundles/jquery")
+
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/unobtrusive")
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -116,17 +117,19 @@
     <script src="~/Scripts/javascript-product-by-attribute.js"></script>
     <script src="~/Scripts/javascript-searchproduct.js"></script>
     <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+
     <script src="~/Content/Theme/University/app/js/owl.carousel.min.js"></script>
     <script src="~/Content/Theme/University/app/js/nb_skew_carousle.js"></script>
     <script src="~/Content/Theme/University/app/js/nb_custom_script.js"></script>
     <script src="~/Content/Theme/University/app/js/jquery.elevatezoom.js"></script>
     <script src="~/Content/Theme/University/app/js/jquery-confirm.min.js"></script>
     <script src="~/Content/Theme/University/app/js/Uni_KitProductDetail_Custom.js"></script>
+    <script src="~/Scripts/jquery.ui.touch-punch.min.js"></script>>
+    
 </body>
 </html>
 <script>
     $(document).ready(function () {
-
         $("#cart").hover(function () {
             $('#cart').addClass('open');
         });
