monor changes checked in Imported from Changeset 2833

--- a/WarehouseEcommerce/Views/Theme/University/Products/_DynamicFilters.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_DynamicFilters.cshtml
@@ -160,6 +160,7 @@
         }
         $("#slider-range").slider({
             range: true,
+            step:1,
             min: Math.floor(@Model.PriceInterval.Item1),
             max: Math.ceil(@Model.PriceInterval.Item2),
             values: [min, max],
