--- a/WarehouseEcommerce/Views/Theme/University/Products/_KitProductAttributeDetail.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_KitProductAttributeDetail.cshtml
@@ -15,8 +15,8 @@
                         @if (stockAvailable > 0)
                         {
                             <input type="hidden" class="availablity" value="true">
-                            <span>Availability:</span>
-                            <br />
+                            @*<span>Availability:</span>
+                            <br />*@
                             @((stockAvailable <= 10 ? "only "+ stockAvailable.ToString("#") + " items left" : "Available"))
                         }
                         else
